fixs: all errors after the first revue

--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -5,3 +5,11 @@
   color: #000000;
   margin: 0 0 54px;
 }
+
+@media (max-width: 621px) {
+  .popup__title {
+    margin: 0 0 70px;
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
