--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -4,6 +4,9 @@
   height: 19px;
   margin: 0;
   background: url(../../../images/like.svg) no-repeat center;
+  outline: none;
+  border: none;
+  cursor: pointer;
   transition: all 0.3s ease 0s;
 }
 
