--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,6 +4,12 @@
   max-height: 100%;
 }
 
+@media (max-width: 800px) {
+  .header__border {
+    margin: 0;
+  }
+}
+
 @media (max-width: 621px) {
   .header__logo {
     margin: 0 0 0 27px;
