--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,7 @@
   padding: 45px 40px 36px;
   margin: 0 auto;
   max-width: 880px;
+  border-bottom: 1px solid #54545470;
 }
 
 @media (max-width: 800px) {
@@ -12,6 +13,6 @@
 
 @media (max-width: 621px) {
   .header {
-    padding: 28px 0 38px;
+    padding: 28px 0 31px;
   }
 }
