--- a/blocks/popup/__btn/popup__btn.css
+++ b/blocks/popup/__btn/popup__btn.css
@@ -1,6 +1,6 @@
 .popup__btn {
   width: 100%;
-  height: 50px;
+  padding: 17px 0;
   margin: 48px 0 0;
   display: flex;
   align-items: center;
@@ -17,4 +17,11 @@
 
 .popup__btn:hover {
   opacity: 0.8;
+}
+
+@media (max-width: 621px) {
+  .popup__btn {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
