--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,10 +1,17 @@
 .popup__close {
   position: absolute;
+  width: 32px;
+  height: 32px;
+  border: none;
+  outline: none;
+  padding: 0;
   top: -40px;
   right: -40px;
+  background: url(../../../images/close-icon.svg) no-repeat center;
   color: #fff;
   cursor: pointer;
   transition: all 0.3s ease 0s;
+  cursor: pointer;
 }
 
 .popup__close:hover {
@@ -13,7 +20,6 @@
 
 @media (max-width: 621px) {
   .popup__close {
-    top: -40px;
     right: 0;
     width: 20px;
     height: 20px;
