--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,11 @@
 .profile__info {
-  padding: 0 0 0 30px;
+  max-width: 60%;
+  padding: 0 30px;
 }
 
 @media (max-width: 621px) {
   .profile__info {
+    max-width: 100%;
     padding: 0;
     text-align: center;
   }
