--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,18 +1,33 @@
 .header {
-  padding: 45px 40px 36px;
+  padding: 45px 40px 0;
   margin: 0 auto;
   max-width: 880px;
-  border-bottom: 1px solid #54545470;
+}
+
+.header::after {
+  content: '';
+  display: block;
+  padding: 36px 0 0;
+  border-bottom: 1px solid #545454;
+  opacity: 0.7;
 }
 
 @media (max-width: 800px) {
+  .header::after {
+    padding: 35px 0 0;
+  }
+
   .header {
-    padding: 35px 24px 35px;
+    padding: 35px 24px 0;
   }
 }
 
 @media (max-width: 621px) {
+  .header::after {
+    padding: 31px 0 0;
+  }
+
   .header {
-    padding: 28px 0 31px;
+    padding: 28px 0 0;
   }
 }
