--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -8,13 +8,13 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   width: 430px;
-  padding: 36px;
+  padding: 34px 36px 36px 36px;
   transition: 0.5s all;
 }
 
 @media (max-width: 621px) {
   .popup__container {
     width: 282px;
-    padding: 22px;
+    padding: 25px 22px;
   }
 }
