--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,10 +1,5 @@
-.popup.popup_opened {
+.popup_opened {
   opacity: 1;
   pointer-events: all;
-  transition: 0.5s all;
-}
-
-.popup__container.popup_opened {
-  transform: translate(-50%, -50%) scale(1);
   transition: 0.5s all;
 }
