--- a/blocks/profile/__add-batton/profile__add-batton.css
+++ b/blocks/profile/__add-batton/profile__add-batton.css
@@ -25,6 +25,7 @@
 @media (max-width: 621px) {
   .profile__add-batton {
     background: url(../../../images/add-batton-mobil.svg) no-repeat center;
+    background-size: 16px;
     width: 100%;
     margin: 32px 0 0;
   }
