--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,7 +1,7 @@
 .profile__avatar {
   display: flex;
   overflow: hidden;
-  width: 120px;
+  min-width: 120px;
   height: 120px;
   border-radius: 50%;
 }
