--- a/pages/index.css
+++ b/pages/index.css
@@ -16,9 +16,12 @@
 @import url(../blocks/elements/__container/elements__container.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__delete/element__delete.css);
+@import url(../blocks/element/__edit/element__edit.css);
 @import url(../blocks/element/__panel/element__panel.css);
 @import url(../blocks/element/__name/element__name.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
