--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,7 +1,7 @@
 .element {
   display: block;
   position: relative;
-  max-width: 282px;
+  min-width: 282px;
   padding: 3px 0 0;
   margin: 0;
 }
