--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,7 @@
 .element__image {
-  width: 100%;
-  height: 282px;
+  min-width: 100%;
+  min-height: 282px;
+  max-height: 282px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   display: block;
