--- a/blocks/popup-look-img/__container/popup-look-img__container.css
+++ b/blocks/popup-look-img/__container/popup-look-img__container.css
@@ -1,8 +1,9 @@
 .popup-look-img__container {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   display: table;
   margin: 0;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(0);
+  transition: 0.5s all;
 }
