fix: after first revue

--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -3,3 +3,4 @@
   pointer-events: all;
   transition: 0.5s all;
 }
+/* К сожалению такой способ, что вы писали можно реализовать только на препроцессорах ( */
