--- a/blocks/elements/__container/elements__container.css
+++ b/blocks/elements/__container/elements__container.css
@@ -7,6 +7,7 @@
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   grid-template-rows: 361px;
   gap: 17px;
+  justify-items: center;
 }
 
 @media (max-width: 621px) {
@@ -15,5 +16,6 @@
     padding: 36px 0 0;
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 }
