refactor: shorten js code after second revue

--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,6 +1,7 @@
 .popup_opened {
   opacity: 1;
   pointer-events: all;
-  transition: 0.5s all;
 }
-/* К сожалению такой способ, что вы писали можно реализовать только на препроцессорах ( */
+.popup_opened .popup__container {
+  transform: translate(-50%, -50%) scale(1);
+}
