--- a/blocks/popup-look-img/__container/popup-look-img__container.css
+++ b/blocks/popup-look-img/__container/popup-look-img__container.css
@@ -2,9 +2,21 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  display: table;
+  max-height: 75vh;
+  display: block;
   margin: 0;
   object-fit: cover;
+  border-radius: 0;
+  box-shadow: none;
+  padding: 0;
+  min-width: 0;
   transform: translate(-50%, -50%) scale(0);
   transition: 0.5s all;
+}
+
+@media (max-width: 621px) {
+  .popup-look-img__container {
+    min-width: 0;
+    padding: 0;
+  }
 }
