--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,14 +7,14 @@
   background: #fff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  width: 430px;
+  min-width: 430px;
   padding: 34px 36px 36px 36px;
   transition: 0.5s all;
 }
 
 @media (max-width: 621px) {
   .popup__container {
-    width: 282px;
+    min-width: 282px;
     padding: 25px 22px;
   }
 }
