--- a/pages/index.css
+++ b/pages/index.css
@@ -32,7 +32,11 @@
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__label/popup__label.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/__input-error_active/popup__input-error_active.css);
 @import url(../blocks/popup/__btn/popup__btn.css);
+@import url(../blocks/popup/__btn/_inactive/popup__btn_inactive.css);
 @import url(../blocks/popup-look-img/popup-look-img.css);
 @import url(../blocks/popup-look-img/__container/popup-look-img__container.css);
 @import url(../blocks/popup-look-img/__image/popup-look-img__image.css);
