--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -7,8 +7,10 @@
   display: block;
   margin: 0;
   object-fit: cover;
+  transition: 0.4s ease-in-out;
 }
 
 .element__image:hover {
+  opacity: 0.9;
   cursor: pointer;
 }
