--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,6 +4,11 @@
   width: 282px;
   padding: 3px 0 0;
   margin: 0;
+  transition: 0.6s ease-in-out;
+}
+
+.element:hover {
+  transform: scale(1.05);
 }
 
 @media (max-width: 619px) {
