feat: remains make likes, avatar and icon expect

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -20,7 +20,9 @@
 @import url(../blocks/element/__delete/element__delete.css);
 @import url(../blocks/element/__panel/element__panel.css);
 @import url(../blocks/element/__name/element__name.css);
+@import url(../blocks/element/__like-container/element__like-container.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__number-likes/element__number-likes.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
