--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,7 +1,8 @@
 .profile__avatar {
   display: flex;
-  overflow: hidden;
+  position: absolute;
+  object-fit: cover;
   min-width: 120px;
   height: 120px;
-  border-radius: 50%;
+  z-index: 0;
 }
