--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,7 +1,9 @@
 .header__logo {
+  background: url('../../../images/logo.svg') 0 0 no-repeat;
+  background-size: contain;
   margin: 0;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 142px;
+  min-height: 33px;
 }
 
 @media (max-width: 800px) {
@@ -13,6 +15,7 @@
 @media (max-width: 621px) {
   .header__logo {
     margin: 0 0 0 27px;
-    max-height: 24px;
+    max-width: 104px;
+    min-height: 24px;
   }
 }
